--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-hero></app-hero>
+<app-about-stats></app-about-stats>
+<app-what-makes-us-different></app-what-makes-us-different>
+<app-iron-glove-promise></app-iron-glove-promise>
+<app-quality-assurance></app-quality-assurance>
+<app-industry-slider></app-industry-slider>
 <router-outlet></router-outlet>
