--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,6 @@
 <app-iron-glove-promise></app-iron-glove-promise>
 <app-quality-assurance></app-quality-assurance>
 <app-industry-slider></app-industry-slider>
+<app-partners-section></app-partners-section>
+
 <router-outlet></router-outlet>
