--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 <app-hero></app-hero>
-<app-about-stats></app-about-stats>
+<!-- <app-about-stats></app-about-stats>
 <app-what-makes-us-different></app-what-makes-us-different>
 <app-iron-glove-promise></app-iron-glove-promise>
 <app-quality-assurance></app-quality-assurance>
 <app-industry-slider></app-industry-slider>
 <app-partners-section></app-partners-section>
+<app-team-slider></app-team-slider>
+<app-bulk-order></app-bulk-order>
+<app-footer></app-footer> -->
 
 <router-outlet></router-outlet>
