--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-hero></app-hero>
-<!-- <app-about-stats></app-about-stats>
+ <app-about-stats></app-about-stats>
 <app-what-makes-us-different></app-what-makes-us-different>
 <app-iron-glove-promise></app-iron-glove-promise>
 <app-quality-assurance></app-quality-assurance>
@@ -7,6 +7,6 @@
 <app-partners-section></app-partners-section>
 <app-team-slider></app-team-slider>
 <app-bulk-order></app-bulk-order>
-<app-footer></app-footer> -->
+<!--<app-footer></app-footer> -->
 
 <router-outlet></router-outlet>
