--- a/src/app/what-makes-us-different/what-makes-us-different.component.scss
+++ b/src/app/what-makes-us-different/what-makes-us-different.component.scss
@@ -17,19 +17,28 @@
       max-width: 600px;
   
       h2 {
-        font-size: 40px;
-        font-weight: 700;
+        font-size: 48px;
+        font-weight: 600;
         margin-bottom: 20px;
+        font-family: 'Sora';
+        line-height: 100%;
   
         .highlight {
           color: #f97316; // Tailwind's orange-500
+          font-size: 48px;
+        font-weight: 600;
+        margin-bottom: 20px;
+        font-family: 'Sora';
+        line-height: 100%;
         }
       }
   
       .description {
-        font-size: 18px;
+        font-size: 20px;
+        font-family: 'Sora';
+        font-weight: 300;
+        line-height: 150%;
         color: #333;
-        line-height: 1.6;
         margin-bottom: 32px;
       }
   
@@ -39,7 +48,8 @@
         gap: 16px;
   
         .feature-item {
-          font-size: 16px;
+          font-size: 18px;
+          font-family: 'Sora';
           color: #222;
           display: flex;
           align-items: center;
@@ -58,8 +68,8 @@
       flex: 1;
   
       .main-image {
-        width: 100%;
-        max-width: 500px;
+        width: 590px;
+        height: 443px;
         border-radius: 24px;
         object-fit: cover;
       }
@@ -68,8 +78,61 @@
         position: absolute;
         bottom: 16px;
         left: 16px;
-        width: 80px;
-        height: auto;
+        width: 120px;
+        height: 126px;
+      }
+    }
+  }
+  @media (max-width: 768px) {
+    .difference-section {
+      padding: 40px 20px;
+  
+      .content-wrapper {
+        flex-direction: column;
+        align-items: center;
+        gap: 32px;
+      }
+  
+      .text-block {
+        max-width: 100%;
+        text-align: center;
+  
+        h2 {
+          font-size: 32px;
+  
+          .highlight {
+            font-size: 32px;
+          }
+        }
+  
+        .description {
+          font-size: 18px;
+        }
+  
+        .features-grid {
+          grid-template-columns: 1fr; // Stack features vertically
+          gap: 12px;
+          justify-items: center;
+  
+          .feature-item {
+            font-size: 16px;
+            justify-content: center;
+          }
+        }
+      }
+  
+      .image-block {
+        .main-image {
+          width: 100%;
+          height: auto;
+        }
+  
+        .logo-overlay {
+          width: 80px;
+          height: 84px;
+          bottom: 12px;
+          left: 12px;
+        }
       }
     }
   }
