--- a/src/app/about-stats/about-stats.component.scss
+++ b/src/app/about-stats/about-stats.component.scss
@@ -2,26 +2,30 @@
     padding: 80px 100px;
     background-color: #fff;
     color: #000;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Sora', sans-serif;
   
     &__content {
       text-align: center;
       max-width: 1100px;
       margin: 0 auto;
+      line-height: 150%;
+      
     }
   
     &__description {
-      font-size: 24px;
+      font-size: 32px;
       font-weight: 500;
       line-height: 1.5;
       margin-bottom: 48px;
+      
   
       .about-stats__highlight {
         display: block;
         color: #777;
         font-weight: 400;
-        font-size: 22px;
+        font-size: 32px;
         margin-top: 20px;
+        line-height: 150%;
       }
     }
   
@@ -47,6 +51,46 @@
         font-size: 16px;
         color: #444;
         line-height: 1.4;
+      }
+    }
+  }
+  @media (max-width: 768px) {
+    .about-stats {
+      padding: 40px 20px;
+      width: 100%;
+      height: auto;
+  
+      &__content {
+        max-width: 100%;
+      }
+  
+      &__description {
+        font-size: 24px;
+        margin-bottom: 32px;
+  
+        .about-stats__highlight {
+          font-size: 24px;
+          margin-top: 16px;
+        }
+      }
+  
+      &__numbers {
+        flex-direction: column;
+        align-items: center;
+        gap: 24px;
+      }
+  
+      .stat {
+        width: 100%;
+        max-width: 320px;
+  
+        h2 {
+          font-size: 28px;
+        }
+  
+        p {
+          font-size: 14px;
+        }
       }
     }
   }
