--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,6 @@
 <app-partners-section></app-partners-section>
 <app-team-slider></app-team-slider>
 <app-bulk-order></app-bulk-order>
-<!--<app-footer></app-footer> -->
+<app-footer></app-footer>
 
 <router-outlet></router-outlet>
