--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,4 @@
-
+<app-home-hero></app-home-hero>
+<app-glove-section></app-glove-section>
+<app-industry-slider></app-industry-slider>
+<app-bulk-order></app-bulk-order>
