--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,3 +1,4 @@
+<app-hero></app-hero>
 <app-about-stats></app-about-stats>
 <app-what-makes-us-different></app-what-makes-us-different>
 <app-iron-glove-promise></app-iron-glove-promise>
